--- a/themes/hugo-ht/layouts/_default/single.html
+++ b/themes/hugo-ht/layouts/_default/single.html
@@ -41,6 +41,10 @@ Table of Contents:
 </div>
 <a href="#top"><i class="fa fa-chevron-up" style="font-size: 30px; color: black;"></i></a>
 
+<div class="article-container"></div>
+{{ partial "comments.html" . }}
+</div>
+
 </main>
 
 {{ partial "footer.html" . }}
