--- a/themes/hugo-ht/layouts/_default/single.html
+++ b/themes/hugo-ht/layouts/_default/single.html
@@ -42,7 +42,14 @@ Table of Contents:
 <a href="#top"><i class="fa fa-chevron-up" style="font-size: 30px; color: black;"></i></a>
 
 <div class="article-container"></div>
-{{ partial "comments.html" . }}
+{{ partial "utterances" . }}
+<script src="https://utteranc.es/client.js"
+        repo="KristenJZ/KristenJZ.github.io"
+        issue-term="pathname"
+        theme="github-light"
+        crossorigin="anonymous"
+        async>
+</script>
 </div>
 
 </main>
