--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -11,6 +11,8 @@
     {{ partial "head_custom.html" . }}
   </head>
   
+<style body="background-color:#4682b4"></style>
+
   <body>
     <div class="wrapper">
       <header class="header">
