--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -11,7 +11,11 @@
     {{ partial "head_custom.html" . }}
   </head>
   
-<style body="background-color:#4682b4"></style>
+<style>
+ h1{
+  background-color: #4682b4;
+ }
+</style>
 
   <body>
     <div class="wrapper">
