updating site on 2022年 5月18日 星期三 07时08分29秒 CST

--- a/layouts/partials/nav.html
+++ b/layouts/partials/nav.html
@@ -6,6 +6,12 @@
          alt="{{ .Site.Params.logo.alt }}">
       </a>
 
+      <style>
+ body{
+  background-color: #DDF3FF;
+ }
+</style>
+
       <ul class="nav-links" >
         {{ if .IsHome }}
         {{ range .Site.Menus.en }}
